# fastapi-task-agent

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schema.py
backend/app/agent/: task_agent.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 049bf21c8cae_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: agent.py  tasks.py
