[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.135.2",
    "psycopg[binary]>=3.3.3",
    "pydantic-ai-slim[google,openai]>=1.73.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]
